@@ -1,8 +1,8 @@
 Package: RcppXts
 Type: Package
 Title: Interface the 'xts' API via 'Rcpp'
-Version: 0.0.4.4
-Date: 2018-12-24
+Version: 0.0.4.5
+Date: 2020-06-23
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: Access to some of the C level functions of the 'xts' package.  
